--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ krb5-strength (2.0-1) UNRELEASED; urgency=low
   * Recommend cracklib-runtime and tinycdb since they are required to
     build dictionaries.  Downgrade krb5-admin-server to Enhances and add
     heimdal-kdc.
+  * Remove Bugs header now that this package is in Debian proper.
 
  -- Russ Allbery <rra@debian.org>  Mon, 07 Oct 2013 16:30:08 -0700
 
