--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ krb5-strength (2.0-1) UNRELEASED; urgency=low
     - Enable parallel builds.
   * Use dh-autoreconf to rebuild the build system during package builds.
   * Update standards version to 3.9.4 (no changes required).
+  * Rewrite debian/copyright in copyright-format 1.0.
   * Remove Bugs header now that this package is in Debian proper.
 
  -- Russ Allbery <rra@debian.org>  Mon, 07 Oct 2013 16:30:08 -0700
