--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ krb5-strength (2.0-1) UNRELEASED; urgency=low
     - Enable parallel builds.
   * Use dh-autoreconf to rebuild the build system during package builds.
   * Use xz compression for the upstream and Debian tarballs.
+  * Add branch information to the Vcs-Git metadata.
   * Update standards version to 3.9.4 (no changes required).
   * Rewrite debian/copyright in copyright-format 1.0.
   * Remove Bugs header now that this package is in Debian proper.
