Special Heimdal Stanford-only backport to squeeze

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+krb5-strength (2.0-1~sbp60+1) squeeze-backports; urgency=low
+
+  * Special Stanford-only local backport that builds the package against
+    Heimdal instead of MIT Kerberos.  We only need the heimdal-strength
+    program and the MIT API isn't supported until wheezy.
+
+ -- Russ Allbery <rra@debian.org>  Mon, 07 Oct 2013 19:15:22 -0700
+
 krb5-strength (2.0-1) unstable; urgency=low
 
   * Initial upload to Debian.  (Closes: #725753)
