--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
                     User-Visible krb5-strength Changes
 
+krb5-strength 2.1 (unreleased)
+
+    Some of the password rejection error messages have been changed to
+    make them more accurate or comprehensible to the user.
+
 krb5-strength 2.0 (2013-10-07)
 
     Add support for the MIT Kerberos password quality plugin interface,
