--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
                     User-Visible krb5-strength Changes
 
-krb5-strength 2.1 (unreleased)
+krb5-strength 2.1 (2013-10-10)
 
     Fix the package build when CDB support is disabled or TinyCDB was not
     found.
