Change my email address to eagle@eyrie.org

--- a/tools/heimdal-strength.pod
+++ b/tools/heimdal-strength.pod
@@ -55,7 +55,7 @@ krb5-strength package.
 
 =head1 AUTHOR
 
-Russ Allbery <rra@stanford.edu>
+Russ Allbery <eagle@eyrie.org>
 
 =head1 COPYRIGHT AND LICENSE
 
