--- a/README
+++ b/README
@@ -1,7 +1,7 @@
                             krb5-strength 2.1
                (Kerberos password strength checking plugin)
 
-              Maintained by Russ Allbery <rra@stanford.edu>
+              Maintained by Russ Allbery <eagle@eyrie.org>
 
   Copyright 2006, 2007, 2009, 2010, 2012, 2013 The Board of Trustees of
   the Leland Stanford Junior University.  Portions copyright 1993 Alec
@@ -359,7 +359,7 @@ SUPPORT
   will always have the current version of this package, the current
   documentation, and pointers to any additional resources.
 
-  I welcome bug reports and patches for this package at rra@stanford.edu.
+  I welcome bug reports and patches for this package at eagle@eyrie.org.
   However, please be aware that I tend to be extremely busy and work
   projects often take priority.  I'll save your mail and get to it as soon
   as I can, but it may take me a couple of months.
