--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
                     User-Visible krb5-strength Changes
 
+krb5-strength 2.2 (unreleased)
+
+    cdbmake-wordlist now supports filtering out words based on maximum
+    length (-L) and arbitrary user-provided regular expressions (-x).  It
+    also supports running in filter mode to produce a new wordlist instead
+    of a CDB file (-o).
+
 krb5-strength 2.1 (2013-10-10)
 
     Fix the package build when CDB support is disabled or TinyCDB was not
