--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,13 @@
 
 krb5-strength 2.2 (unreleased)
 
+    More complex character class requirements can be specified with the
+    configuration option require_classes.  This option lists the character
+    classes the password must contain.  These restrictions may be
+    qualified with password length ranges, allowing the requirements to
+    change with the length of the password.  See README for more details
+    and the option syntax.
+
     cdbmake-wordlist now supports filtering out words based on maximum
     length (-L) and arbitrary user-provided regular expressions (-x).  It
     also supports running in filter mode to produce a new wordlist instead
