Add tests for configuration syntax errors
This should really be abstracted out into data, but we'll get to
that at some later date.

--- a/TODO
+++ b/TODO
@@ -14,3 +14,6 @@
 
  * Use the realm of the principal changing its password to determine the
    krb5.conf configuration rather than always using the default realm.
+
+ * Refactor the tests for configuration errors in the heimdal-strength
+   test suite into JSON.
