--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+krb5-strength (2.2-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+    - Support for more complex length-sensitive character class
+      restrictions using the new require_classes configuration setting.
+    - cdbmake-wordlist now supports filtering out words based on maximum
+      length and user-supplied regular expressions, and supports running
+      in filter mode to generate a new word list.
+
+ -- Russ Allbery <rra@debian.org>  Mon, 16 Dec 2013 15:15:07 -0800
+
 krb5-strength (2.1-1) unstable; urgency=low
 
   * New upstream release.
