--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ krb5-strength (2.2-1) UNRELEASED; urgency=low
     - cdbmake-wordlist now supports filtering out words based on maximum
       length and user-supplied regular expressions, and supports running
       in filter mode to generate a new word list.
+  * Update to standards version 3.9.5 (no changes required).
 
  -- Russ Allbery <rra@debian.org>  Mon, 16 Dec 2013 15:15:07 -0800
 
